Modify resume and cover letter

--- a/resume_2018/resume_2018.tex
+++ b/resume_2018/resume_2018.tex
@@ -41,86 +41,24 @@
 
 % \section{Objective}
 
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% %     SKILLS
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     SKILLS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % FOR RESUME
 \section{Skills}
 
 \raggedright{
     Programming Language:
-    C/C++,
-    % \textbullet{}
-    Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn),
-    % \textbullet{}
-    R,
-    % \textbullet{}
-    BASH shell script\\
-    % \textbullet{}
-    % VBA
-    % Visual Basic\\
-    % \textbullet{}
-    Machine Learning:
-    feature engineering,
-    data scraping,
-    classification,
-    % kNN
-    % \textbullet{}
-    linear/logistic regression,
-    % \textbullet{}
-    decision tree,
-    % \textbullet{}
-    % SVM
-    % \textbullet{}
-    % k-Means
-    % \textbullet{}
-    clustering
-    NLP\\
+    C/C++, Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn), R, BASH shell script\\
+    Machine Learning: data scraping, feature engineering, classification, linear/logistic regression, decision tree, clustering, NLP\\
     Statistics:
-    Regression (LSE/MLE),
-    % \textbullet{}
-    Confidence intervals,
-    % \textbullet{}
-    Monte Carlo method,
-    % \textbullet{}
-    Hypothesis test,
-    % \textbullet{}
-    A/B test,
-    % \textbullet{}
-    bootstrapping,
-    % \textbullet{}
-    Bayesian\\
-    % \textbullet{}
-    % Git/SVN
-    % \textbullet{}
+    Regression (LSE/MLE), Confidence intervals, Monte Carlo method, Hypothesis test, A/B test, bootstrapping, Bayesian\\
     Version Control:
     Git
     \textbullet{}
     Database:
     SQL\\
-    % Framework:
-    % ROOT\\
-    % Others:
-    % \LaTeX\
-    % \textbullet{}
-    % HTML
-    % 
-    % Mac OS/Linux
-    % \textbullet{}
-    % Office:
-    % Microsoft Office/Apple Keynote/Pages\\
-    % \textbullet{}
-    % \textbullet{}
-    % 
-    % \textbullet{}
-    % Vim
-    % \textbullet{}
-    % Data analysis (detail)
-    % \textbullet{}
-    % cross department communication
-    % \textbullet{}
-    % teamwork\\
 }
 \sectionsep
 
@@ -131,16 +69,15 @@
 % % FOR RESUME
 \section{Projects}
 
-% % \runsubsection{project name}
-% % \descript{}
-% % %\location{}
-% % \begin{tightemize}
-% % \item What I did on the project which is most important
-% % \end{tightemize}
-% % \sectionsep
+% \runsubsection{project name}
+% \descript{}
+% %\location{}
+% \begin{tightemize}
+% \item What I did on the project which is most important
+% \end{tightemize}
+% \sectionsep
 
 \runsubsection{Upstart 3-year Terms Loan Charged-off Rate Prediction}
-% \descript{| Graduate work}
 \location{}
 \begin{tightemize}
 \item Analyzed 50,000 loans with different repayment status within two years to extract the monthly default rate.
@@ -149,7 +86,6 @@
 \sectionsep
 
 \runsubsection{Capital Bikeshare Rental Demand}
-% \descript{| Graduate work}
 \location{}
 \begin{tightemize}
 \item Performed feature selection and engineering to remove 3 standard deviations outliers and created new datetime features.
@@ -159,7 +95,6 @@
 \sectionsep
 
 \runsubsection{INSPIRE HEP PostDoc Position in North America}
-% \descript{| Private project}
 \location{}
 \begin{tightemize}
 \item Scraped website using Beautiful Soup and converted results into SQL database using sqlalchemy.
@@ -168,7 +103,6 @@
 \sectionsep
 
 \runsubsection{Real Lepton Efficiency}
-% \descript{| Graduate work}
 \location{}
 \begin{tightemize}
 \item Classified particles using decision tree based methods to improve the real lepton identification efficiency from 80\% to 98\%.
@@ -195,80 +129,46 @@
 % \end{tightemize}
 % \sectionsep
 
-\runsubsection{Organisation Europ\'{e}enne pour la Recherche Nucl\'{e}aire (CERN)}
-\descript{| Graduate Research Assistant}
-\location{2015 - 2018 | Geneva, Switzerland}
+% \runsubsection{Organisation Europ\'{e}enne pour la Recherche Nucl\'{e}aire (CERN)}
+\runsubsection{The European Organization for Nuclear Research (CERN)}
+% \descript{| Graduate Research Assistant}
+% \location{Geneva, Switzerland | 2015 - 2018}
+\descript{Research Assistant}
+\location{Geneva, Swiss | 2015 - 2018}
 \begin{tightemize}
 % FOR RESUME
-\item Performed the data mining from the distributed LHC computing Grid, applied data cleaning and feature engineering to select the significant data, visualized the data distributions, fitted the model using least chi-square regression, interpreted the results using statistical model within 95\% confidence intervals, and presented and documented the analysis findings.
-\item Calibrated the electron isolation efficiency by analyzing 30M+ events and became the standard version of the collaboration. %The results became a central released version of the collaboration.
+% \item Performed the data mining from the distributed LHC computing Grid, applied data cleaning and feature engineering to select the significant data, visualized the data distributions, fitted the model using least chi-square regression, interpreted the results using statistical model within 95\% confidence intervals, and presented and documented the analysis findings.
+\item Analyzed 30M+ events to improve the true positive rate of isolated electrons from 0.85 to 0.93 and the calibrated electron isolation efficiency became the standard version of the collaboration.
+\item Implemented the decision tree based methods to maximize the significance and optimized the data selection processes.
+\item Built data cleaning and processing pipeline to analyze the data and performed an unbinned maximum likelihood fit to extract signal within 95\% confidence interval.
+% \item Calibrated the electron isolation efficiency by analyzing 30M+ events and became the standard version of the collaboration. %The results became a central released version of the collaboration.
 % \item Mined and cleaned data from the distributed LHC computing Grid over 170 computing centers in 42 countries using Rucio.
 % \item Mined data from Grid and wrote data filtering algorithm to reduce the data size from $\sim$400 TB to less than 200 GB and signficantly speed up processing time of data analysis.
 % \item Analyzed large datasets with 400+ variables per file and $\sim$30M entries in total using methods including Monte Carlo simulation, event selection and reconstruction, background suppression etc. (i.e. EDA, feature processing, and feature engineering). 
 % \item Produced Monte Carlo (MC) simulation datasets and performed exploratory data analysis (EDA) on MC datasets.
 % Applied muti-dimensional least Chi-square fit to extract signal events, performed statistical interpretations to validate model or rule out the model parameter space (i.e. model fitting and statistics hypothesis test).
 % \item Analyzed $\sim$200 GB large datasets with 400+ variables per file and $\sim$30M entries in total by performing exploratory data analysis (EDA), feature processing and engineering, least square estimation (LSE) and maximum likelihood estimation (MLE) model fitting, and statistics hypothesis test.
-
-
-% FOR CV
-% \item Participated in E/gamma combine performance group, same-sign 3 leptons + jets analysis group, and Higgsino LSP analysis group.
-% Mainly contributed on electron isolation measurement, real lepton efficiency measurement, and Non-Universal Higgsino Mass model with 2 extra parameters (NUHM2) search.
-% \item Calibrated the electron isolation efficiency by analyzing $Z \to ee$ events using Tag-and-Probe method. The results became ATLAS recommendations. %The results became a central released version (recommendation) of the ATLAS collaboration.
-% \item Used C++ and Python to implement Monte Carlo, event selection and reconstruction, background suppression, maximum likelihood, and least Chi square fit to analyze collision data within 95\% confidence level.
-% % The various analysis methods such as Monte Carlo simulation, candidates extraction, noise suppression, maximum likelihood estimation are implemented.
-% % Finally, the least Chi-square fit and statistical interpretations are applied on the data to extract signals.
-% % The various analysis methods such as Monte Carlo simulation, event selection and reconstruction, background suppression are mainly implemented by C/C++ and the results are visualized using Python with the PyRoot package.
-% % The various analysis methods such as Monte Carlo simulation, event selection and reconstruction (data mining \& EDA), background suppression (feature processing \& feature engineering) are mainly implemented by C/C++ and the results are visualized using Python with the PyRoot package.
-% \item Developed a new object-oriented programming framework in C++ increasing the performance and accuracy of the real lepton efficiency measurement.
-% The new framework processes datasets 10 times larger than the previous one, automates analysis procedures reducing a week manual operations to 5 hours, and increases the efficiency to 98\%.
-% \item Co-developed and maintained the C++ based Tag-and-probe framework for E/gamma combine performance group.
-% % \item Analyzed large proton-proton collision data collected with the ATLAS detector complex using C++ and Python and automated the visualization of results.
-% % \item Used C++ and Python with PyROOT to perform data analysis and automate the visualization of results.
-% \item Took shifts in the ATLAS control room (ACR) to monitor the ATLAS inner detector operation.
 \end{tightemize}
 \sectionsep
 
 \runsubsection{Academia Sinica}
-\descript{| Research Assistant}
-\location{2009 - 2011 | Taipei, Taiwan}
+\descript{Research Assistant}
+\location{Taipei, Taiwan | 2009 - 2011}
 \begin{tightemize}
-% FOR RESUME
-\item Designed new Monte Carlo simulation program using C++ to impove the precision 
-\item Designed Monte Carlo simulation program using C++, analyzed large experimental datasets to classify different background using decision tree based methods, automated the analysis results visualization processes, and reported the finding.
-% \item Analyzed simulated and experimental datasets to classify different background.
-
-% FOR CV
-% % \item Analyzed simulated and experimental datasets to investigate the ambient background radiation. Developed an algorithm to reduce the background.
-% \item Designed simulation program for the high purity germanium detector using C++ with GEANT4 package.% and investigated the ambient background radiation.
-% \item Investigated the ambient background radiation and simulated the physics processes when high energy particles interact with the germanium detector.
-% \item Maintained the extra-low temperature (77 K) environment by setting up liquid Nitrogen cooling system at Taiwan Power Company Nuclear Station II.
-% % \item Mined and analyzed large experimental datasets and helped to setup RAIDs for data storage.
-% \item Communicated across relevant governmental department and private companies.
-% % \item Performed Monte Carlo simulation of the physics processes using C++ with GEANT4 package.
-% % \item Analyzed the kinematic distributions of the MC simulated events.
-% % \item Helped the Tsinghua University to setup the China Jinping Underground Laboratory (CJPL) and built low ambient background shielding using 4 tons of Oxygen free copper bricks.
+\item Discovered serious bugs and redesigned Monte Carlo simulation programs using C++ to improve the accuracy.
+\item Used decision tree based methods to classify background sources and reduced the major background events by 50\%.
+% \item Classified different background using decision tree based methods, automated the analysis results visualization processes, and reported the finding.
 \end{tightemize}
 \sectionsep
 
-\runsubsection{Taiwan Semiconductor Manufacturing Company, LTD. (TSMC)}
-\descript{| SPICE R\&D engineer}
-\location{2006 - 2009 | Hsinchu, Taiwan}
+\runsubsection{Taiwan Semiconductor Manufacturing Company}
+\descript{R\&D engineer}
+\location{Hsinchu, Taiwan | 2006 - 2009}
 \begin{tightemize}
-% FOR RESUME
-\item Completed an urgent project 2 months ahead of the normal schedule to save the contract. 
-\item Automated data collection processes to reduce the probability of making mistakes by manual operations and shorten 20\% of the measurement time.
-\item Led 3 projects and supported 4 projects to model 
-\item Performed model parameterization, validation, visualization, documentation, and customer support.
-
-% FOR CV
-% \item High-voltage SPICE (Simulation Program with Integrated Circuit Emphasis) model data collection automation, model electrical characteristic parameterization, model accuracy validation, model documentation, and customer support.
-% % \item High-voltage SPICE model raw data collection automation, model parameterization, model accuracy and completeness validation, model documentation, and customer support.
-% \item Project leader for 3 projects, and supporter for 4 projects.
-% \item SPICE model specification, production planning and scheduling.
-% % \item Cross departments discussion about SPICE model specification, production planning and scheduling.
-% \item In charged of the Mix-mode and BCD HV SPICE Model projects with the following process technologies: 0.13 $\mu$m, 0.18 $\mu$m, 0.20 $\mu$m, 0.25 $\mu$m, 0.35 $\mu$m 0.5 $\mu$m, 0.60 $\mu$m.
-% % \item Modeling MOSFET, BJT, Diode, Resistor, Capacitor, Back-end etc.
-% \item Tested the newly installed probe station and programmed to set up the automation reducing 20\% of the measurement time.
+\item Completed an urgent project 2 months ahead of the normal schedule and saved the contract.
+\item Programmed measurement system to automate data collection processes and reduced 30\% of manual operations time.
+\item Led and supported 7 projects to build device models using regression, visualized and documented the results for customers.
+% \item Led and supported 7 projects, performed model parameterization, validation, visualization, documentation, and provided customer support.
 \end{tightemize}
 \sectionsep
 
@@ -282,16 +182,9 @@
 \section{Education} 
 
 \runsubsection{University of Oklahoma}
-\descript{| Ph.D. in Physics | Cum. GPA: 3.47 / 4.00}
-% \descript{| Ph.D. in Physics}
-\location{2011 - 2018 | Norman, OK}
+\descript{Ph.D. in Physics | Cum. GPA: 3.47 / 4.00}
+\location{Norman, OK | 2011 - 2018}
 \begin{tightemize}
-% FOR CV
-% \item Advisor: Patrick Skubic
-% \item Dissertation: Search for electroweak production of supersymmetric states in non-universal higgs mass model with two extra parameters compressed scenario with the ATLAS detector\\
-%       \href{https://hdl.handle.net/11244/299774}{\color{link}{Dissertation link}}
-% \item Published 4 journal papers and 5 conference notes, 18 internal notes, and presented in 2 conferences.
-% FOR RESUME
 \item Published 4 top journal papers and 5 conference notes, and presented in 2 conferences.
 \item 6 semesters teaching assistant for college and graduate level courses.
 % \item Been president of Taiwanese Student Association (TSA) and orginalized several TSA on campus events.
@@ -299,16 +192,10 @@
 \sectionsep
 
 \runsubsection{National Taiwan University}
-\descript{| M.S. in Physics | Cum. GPA: 3.86 / 4.00}
-% \descript{| M.S. in Physics}
-\location{2003 - 2006 | Taipei, Taiwan}
+\descript{M.S. in Physics | Cum. GPA: 3.86 / 4.00}
+\location{Taipei, Taiwan | 2003 - 2006}
 \begin{tightemize}
-% FOR CV
-% \item Advisor: Pao-Ti Chang
-% \item Thesis: Measurements of branching fractions and CP asymmetries in $B \to \phi \phi K$ decays at Belle\\
-%       \href{http://www.airitilibrary.com/Publication/alDetailedMesh1?DocID=U0001-1407200616551200}{\color{link}{Thesis link}}
-% FOR RESUME & CV
-\item Graduate student thesis Awards, The Physical Society of Taiwan, 2006.
+\item Won 3$^{rd}$ place graduate student thesis awards, The Physical Society of Taiwan, 2006.
 \end{tightemize}
 \sectionsep
 
@@ -318,133 +205,6 @@
 % \begin{tightemize}
 % \item Certificate of Holistic Achievement Award, 1998 - 1999, 1999 - 2000, and 2000 - 2001
 % \item Certificate of Academic Achievement Award, 2000 - 2001
-% \end{tightemize}
-% \sectionsep
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%  UNCOMMENT THE FOLLOWING SECTION FOR CV
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     PUBLICATIONS
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \section{Publications}
-% 178 records on INSPIRE. Here lists the main contributions and links.
-
-% \runsubsection{Papers:}
-% \location{}
-% \begin{tightemize}
-% \item Search for electroweak production of supersymmetric states in scenarios with compressed mass spectra at $\sqrt{s} = 13$ TeV $pp$ collision data with the ATLAS detector\\
-%       link: \href{https://journals.aps.org/prd/abstract/10.1103/PhysRevD.97.052010}{PRD 97, 052010 (2018)}
-% \item Search for supersymmetry in final states with two same-sign or three leptons and jets using 36 fb$^{-1}$ of $\sqrt{s} = 13$ TeV $pp$ collision data with the ATLAS detector\\
-%       link: \href{https://link.springer.com/article/10.1007/JHEP09(2017)084}{JHEP09 (2017) 084}
-% \item Search for supersymmetry at $\sqrt{s} = 13$ TeV in final states with jets and two same-sign leptons or three leptons with the ATLAS detector\\
-%       link: \href{https://link.springer.com/article/10.1140%2Fepjc%2Fs10052-016-4095-8}{Eur. Phys. J. C 76 (2016) 259}
-% \item Search for resonances in diphoton events at $\sqrt{s} = 13$ with the ATLAS detector\\
-%       link: \href{https://link.springer.com/article/10.1007/JHEP09(2016)001}{JHEP09 (2016) 001}
-% \end{tightemize}
-% \sectionsep
-
-% \runsubsection{Conference notes:}
-% \location{}
-% \begin{tightemize}
-% \item Search for supersymmetry in final states with two same-sign or three leptons and jets using 36 fb$^{-1}$ of $\sqrt{s} = 13$ TeV $pp$ collision data with the ATLAS detector\\
-%       link: \href{https://cds.cern.ch/record/2261952}{ATLAS-COM-CONF-2017-041}
-% \item Search for scalar diphoton resonances with 15.4 fb$^{-1}$ of data collected at $\sqrt{s} = 13$ TeV in 2015 and 2016 with the ATLAS detector\\
-%       link: \href{https://cds.cern.ch/record/2199338}{ATLAS-COM-CONF-2016-056}
-% \item Electron efficiency measurements with the ATLAS detector using the 2015 LHC proton-proton collision data\\
-%       % link: \href{https://cds.cern.ch/record/2157687}{ATLAS-CONF-2016-024}
-%       link: \href{https://cds.cern.ch/record/2142831}{ATLAS-COM-CONF-2016-028}
-% \item Search for resonances in diphoton events with the ATLAS detector at $\sqrt{s} = 13$ TeV\\
-%       link: \href{https://cds.cern.ch/record/2138074}{ATLAS-COM-CONF-2016-016}
-% \item Search for supersymmetry at $\sqrt{s} = 13$ TeV in final states with jets and two same-sign leptons or three leptons with the ATLAS detector\\
-%       link: \href{https://cds.cern.ch/record/2114088}{ATLAS-COM-CONF-2015-100}
-% \end{tightemize}
-% \sectionsep
-
-% \runsubsection{Internal notes:}
-% \location{}
-% \begin{tightemize}
-% \item SUSY searches for electroweak production with compressed mass spectra at ATLAS\\
-%       link: \href{https://cds.cern.ch/record/2631591}{ATL-COM-PHYS-2018-1073}
-% \item Search for weak production of compressed supersymmetry with two soft leptons and missing transverse momentum in $pp$ collision at $\sqrt{s} = 13$ TeV with the ATLAS detector\\
-%       link: \href{https://cds.cern.ch/record/2284973}{ATL-COM-PHYS-2017-1440}
-% \item Support note for electron ID: electron isolation\\
-%       link: \href{https://cds.cern.ch/record/2274466}{ATL-COM-PHYS-2017-1043}
-% \item Overview of the methods used to estimate the fake lepton background in the SUSY group\\
-%       link: \href{https://cds.cern.ch/record/2261709}{ATL-COM-PHYS-2017-469}
-% \item ATLAS electron, photon and muon isolation in Run 2\\
-%       link: \href{https://cds.cern.ch/record/2256658}{ATL-COM-PHYS-2017-290}
-% \item Search for supersymmetry in final states with two same-sign or three leptons and jets using $\sqrt{s} = 13$ TeV $pp$ collision data collected with the ATLAS detector\\
-%       link: \href{https://cds.cern.ch/record/2252643}{ATL-COM-PHYS-2017-149}
-% \item Searches for weak production of compressed supersymmetry in $pp$ collision at $\sqrt{s} = 13$ TeV with the ATLAS detector\\
-%       link: \href{https://cds.cern.ch/record/2235272}{ATL-COM-PHYS-2016-1708}
-% \item Search for strongly-produced superpartners in final states with same-sign or three leptons and jets in 2015+2016 $pp$ collision data at $\sqrt{s} = 13$ TeV (Supporting note for Moriond 2017)\\
-%       link: \href{https://cds.cern.ch/record/2231789}{ATL-COM-PHYS-2016-1616}
-% \item Measurement of electron isolation efficiencies and scale factors with early Run-2 data\\
-%       link: \href{https://cds.cern.ch/record/2209586}{ATL-COM-PHYS-2016-1181}
-% \item Search for supersymmetry at $\sqrt{s} = 13$ TeV with two same-sign leptons or three leptons with the ATLAS detector\\
-%       link: \href{https://cds.cern.ch/record/2196580}{ATL-COM-PHYS-2016-865}
-% \item Search for new phenomena in diphoton events with the ATLAS detector at $\sqrt{s} = 13$ TeV: Isolation studies\\
-%       link: \href{https://cds.cern.ch/record/2162758}{ATL-COM-PHYS-2016-760}
-% \item Search for strongly-produced superpartners in final states with same-sign or three leptons and jets in 2015+2016 $pp$ collisions data at $\sqrt{s} = 13$ TeV (Supporting note)\\
-%       link: \href{https://cds.cern.ch/record/2151944}{ATL-COM-PHYS-2016-495}
-% \item Isolation studies : Search for new phenomena in diphoton events with the ATLAS detector at $\sqrt{s} = 13$ TeV\\
-%       link: \href{https://cds.cern.ch/record/2136940}{ATL-COM-PHYS-2016-216}
-% \item Supporting document on electron identification and efficiency measurements using the 2015 LHC proton-proton collision data\\
-%       link: \href{https://cds.cern.ch/record/2125283}{ATL-COM-PHYS-2016-041}
-% \item Electron isolation efficiencies with 2015 data\\
-%       link: \href{https://cds.cern.ch/record/2112167}{ATL-COM-PHYS-2015-1486}
-% \item Search for supersymmetry at $\sqrt{s} = 13$ TeV in final states with jets and two same-sign leptons or three leptons with the ATLAS detector\\
-%       link: \href{https://cds.cern.ch/record/2102919}{ATL-COM-PHYS-2015-1382}
-% \item Search for strongly produced superpartners in final states with same-sign leptons or three leptons and jets in $pp$ collisions at $\sqrt{s} = 13$ TeV (Supporting note)\\
-%       link: \href{https://cds.cern.ch/record/2052581}{ATL-COM-PHYS-2015-1150}
-% \item Search for strongly produced superpartners in final states with same-sign leptons or three leptons and jets: preparing for 2015 analyses\\
-%       link: \href{https://cds.cern.ch/record/2012029}{ATL-COM-PHYS-2015-329}
-% \end{tightemize}
-% \sectionsep
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     SKILLS
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \section{Skills}
-
-% \location{Languages:}
-% C/C++, Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn), BASH shell script, R, VBA\\
-% \location{Framework:}
-% ROOT, HistFitter\\
-% \location{Database:}
-% SQL\\
-% \location{Tools:}
-% Git, SVN, Vim, \LaTeX, HTML, Markdown, MicroSoft Office, Apple Pages/Numbers/Keynote\\
-% \location{Machin Learning:}
-% kNN, linear/logistic regression, decision tree, SVM, k-Means\\
-% \location{OS:}
-% Mac, Linux, Unix, Windows\\
-% \sectionsep
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     LEADERSHIP
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \section{Leadership}
-
-% \runsubsection{President of Taiwanese Student Association (TSA) at the University of Oklahoma}\\
-% \location{2012 - 2013}
-% \begin{tightemize}
-% \item Organized several TSA events in campus and participated in the joint events with the Taiwanese community in Oklahoma.
-% \item Led TSA to win the first place of the Eve of Nations at the University of Oklahoma.
 % \end{tightemize}
 % \sectionsep
 
