Modify cover letter, resume, research statement

--- a/resume_2018/cover_letter_2018.tex
+++ b/resume_2018/cover_letter_2018.tex
@@ -19,8 +19,10 @@
 \newcommand{\CompanyName}{Company}
 % \newcommand{\CompanyAddress}{City, State}
 \newcommand{\CompanyAddress}{San Francisco, CA}
+% \newcommand{\CompanyAddress}{Seattle, WA}
 \newcommand{\JobPositionName}{Data Scientist}
-\newcommand{\ManagerName}{Madam or Sir to whom it may concern:}
+% \newcommand{\ManagerName}{Madam or Sir to whom it may concern:}
+\newcommand{\ManagerName}{Hiring Manager,}
 \newcommand{\ClosingWords}{Yours faithfully,} % 非以對方姓氏稱呼對方時
 %\newcommand{\ClosingWords}{Yours sincerely,} % 知道對方姓氏時
 
