--- a/resume_2018/research_statement.tex
+++ b/resume_2018/research_statement.tex
@@ -98,8 +98,16 @@ I have been applying the machine learning models such as linear regression, logi
 %%%%%%%%%%%%%%%%%%%%
 
 \section{Future Directions}
-In the future I would like to continue working in the area of data analysis in experimental particle physics but I am also  extremely interested to investigate different directions such as hardware or firmware development.
-In addition, I plan to employ the machine leaning technologies to the experimental datasets to improve the analysis accuracy and precision.
+In the future I would like to continue working in the topic of searching for the SUSY particles in the compress scenario for the NUHM2 interpretation.
+This study is aimed for the summer conference and we got approval for submitting the requests to produce the official MC production a couple weeks ago.
+I would also plan to employ the machine leaning technologies to the experimental datasets to improve the analysis accuracy and precision.
+
+Furthermore I am also interest to work in the new physics beyond the Standard Model and the precision measurement of the Standard Model.
+As a particle physicist, the knowledge about the hardware are important.
+I would like to participate into the development of the hardware such as the 
+
+My background and experience in the particle physics has built a solid ground for pursuing my academic career in physics.
+I am very interested in working with your group and am confident that I would be a valuable addition.
 
 %%%%%%%%%%%%%%%%%%%%
 
