--- a/resume_2018/resume_2018.tex
+++ b/resume_2018/resume_2018.tex
@@ -11,7 +11,6 @@
 
 \documentclass[letterpaper]{deedy-resume-openfont}
 
-
 \begin{document}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -60,55 +59,6 @@
     Database:
     SQL\\
 }
-\sectionsep
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     Project
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% % FOR RESUME
-\section{Projects}
-
-% \runsubsection{project name}
-% \descript{}
-% %\location{}
-% \begin{tightemize}
-% \item What I did on the project which is most important
-% \end{tightemize}
-% \sectionsep
-
-\runsubsection{Upstart 3-year Terms Loan Charged-off Rate Prediction}
-\location{}
-\begin{tightemize}
-\item Analyzed 50,000 loans with different repayment status within two years to extract the monthly default rate.
-\item Predicted the charged-off rate by the time all 3-year terms finished using linear regression.
-\end{tightemize}
-\sectionsep
-
-\runsubsection{Capital Bikeshare Rental Demand}
-\location{}
-\begin{tightemize}
-\item Performed feature selection and engineering to remove 3 standard deviations outliers and created new datetime features.
-\item Visualized the weather information and imputed missing data using the random forest model based estimation.
-\item Used random forest model to predict the total count of bikes rented during each hour of the last 10 days in each month.
-\end{tightemize}
-\sectionsep
-
-\runsubsection{INSPIRE HEP PostDoc Position in North America}
-\location{}
-\begin{tightemize}
-\item Scraped website using Beautiful Soup and converted results into SQL database using sqlalchemy.
-\item Leveraged natural language processing (NLP) and machine learning to build model to predict experiments which institution participates.
-\end{tightemize}
-\sectionsep
-
-\runsubsection{Real Lepton Efficiency}
-\location{}
-\begin{tightemize}
-\item Classified particles using decision tree based methods to improve the real lepton identification efficiency from 80\% to 98\%.
-\item Designed data filtration algorithms in C++ reducing the data size from $\sim$400 TB to less than 200 GB.%by a factor of 100.
-\item Developed a new framework to reduce the run time from one week manual operations to 5 hours automation.
-\end{tightemize}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -172,8 +122,54 @@
 \end{tightemize}
 \sectionsep
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     Project
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+% % FOR RESUME
+\section{Projects}
 
+% \runsubsection{project name}
+% \descript{}
+% %\location{}
+% \begin{tightemize}
+% \item What I did on the project which is most important
+% \end{tightemize}
+% \sectionsep
+
+\runsubsection{Real Lepton Efficiency}
+\location{}
+\begin{tightemize}
+\item Classified particles using decision tree based methods to improve the real lepton identification efficiency from 80\% to 98\%.
+\item Designed data filtration algorithms in C++ reducing the data size from $\sim$400 TB to less than 200 GB.%by a factor of 100.
+\item Developed a new framework to reduce the run time from one week manual operations to 5 hours automation.
+\end{tightemize}
+\sectionsep
+
+\runsubsection{Capital Bikeshare Rental Demand}
+\location{}
+\begin{tightemize}
+\item Performed feature selection and engineering to remove 3 standard deviations outliers and created new datetime features.
+\item Visualized the weather information and imputed missing data using the random forest model based estimation.
+\item Used random forest model to predict the total count of bikes rented during each hour of the last 10 days in each month.
+\end{tightemize}
+\sectionsep
+
+\runsubsection{Upstart 3-year Terms Loan Charged-off Rate Prediction}
+\location{}
+\begin{tightemize}
+\item Analyzed 50,000 loans with different repayment status within two years to extract the monthly default rate.
+\item Predicted the charged-off rate by the time all 3-year terms finished using linear regression.
+\end{tightemize}
+\sectionsep
+
+\runsubsection{INSPIRE HEP PostDoc Position in North America}
+\location{}
+\begin{tightemize}
+\item Scraped website using Beautiful Soup and converted results into SQL database using sqlalchemy.
+\item Leveraged natural language processing (NLP) and machine learning to predict institution participants in experiments.
+\end{tightemize}
+\sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EDUCATION
