Academic CV, cover letter, list of publication, research statement

--- a/resume_2018/academic_research_statement.tex
+++ b/resume_2018/academic_research_statement.tex
@@ -32,17 +32,17 @@
 
 My research interest is in experimental particle physics and computing.
 In particular, I am interested in applying machine learning techniques to improve the analysis results.
-I received my Ph.D degree from the University of Oklahoma (OU) in May 2018 and I am currently working as a postdoctoral researcher in the OU HEP group on supersymmetry (SUSY) searches for the Non-Universal Higgs Mass Model with 2 extra parameters (NUHM2).
+I received my Ph.D. degree from the University of Oklahoma (OU) in May 2018 and I am currently working as a postdoctoral researcher in the OU HEP group on supersymmetry (SUSY) searches for the Non-Universal Higgs Mass Model with 2 extra parameters (NUHM2).
 For the past three years, I had the opportunity to be stationed at CERN to participate in the ATLAS collaboration to work with many excellent physicists.
 I have played an important role in the electron isolation measurement and contributed to the recommendation of isolation scale factors.
 All of the analysis groups in the ATLAS collaboration using isolated electrons in their study have to adopt the recommendation to calibrate the difference between the Monte Carlo simulated events and data.
-My dissertation search has provided me with a unique experience working on the radiative natural SUSY which provided a possible explanation of the existence of SUSY particles while maintains the Higgs mass unchanged and no large cancellations at the electroweak scale.
+My dissertation search has provided me with a unique experience working on the radiative natural SUSY which provided a possible explanation of the existence of SUSY particles while maintains the lightest Higgs mass about 125 GeV and no large cancellations at the electroweak scale.
 In addition, I also have some experiences on neutrino physics and $B$-physics.
 
 %%%%%%%%%%%%%%%%%%%%
 
 \section{Current and Previous Research}
-My Ph.D research at the University of Oklahoma (2011 to 2018) was focused on searching for supersymmetric particles at the ATLAS detector.
+My Ph.D. research at the University of Oklahoma (2011 to 2018) was focused on searching for supersymmetric particles at the ATLAS detector.
 After passing the written and oral Ph.D. qualifier exams, I relocated to CERN (2015 to 2018) and participated in the same-sign/3L and Higgsino LSP analysis groups.
 Beside searching for SUSY particles, I also measured the electron isolation scale factors and provided the results as the ATLAS $E/\gamma$ recommendations by the Combined Performance (CP) group.
 
@@ -102,10 +102,10 @@ In the future I would like to continue working in the topic of searching for the
 This study is aimed for the summer conference and we got approval for submitting the requests to produce the official MC production a couple weeks ago.
 I would also plan to employ the machine leaning technologies to the experimental datasets to improve the analysis accuracy and precision.
 
-Furthermore I am also interest to work in the new physics beyond the Standard Model and the precision measurement of the Standard Model.
-As a particle physicist, the knowledge about the hardware are important.
-I would like to participate into the development of the hardware such as the 
-
+% SMU
+Furthermore I am also interested to work in the new physics beyond the Standard Model and the precision measurement of Higgs properties.
+I had some experiences of taking inner detector ACR shift and would like to  involved in the hardware upgrades such as LAr and TDAQ system.
+%
 My background and experience in the particle physics has built a solid ground for pursuing my academic career in physics.
 I am very interested in working with your group and am confident that I would be a valuable addition.
 
