--- a/resume_2018/cover_letter_2018.tex
+++ b/resume_2018/cover_letter_2018.tex
@@ -17,8 +17,8 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\CompanyName}{Company}
-% \newcommand{\CompanyAddress}{City, State}
-\newcommand{\CompanyAddress}{San Francisco, CA}
+\newcommand{\CompanyAddress}{City, State}
+% \newcommand{\CompanyAddress}{San Francisco, CA}
 % \newcommand{\CompanyAddress}{Seattle, WA}
 \newcommand{\JobPositionName}{Data Scientist}
 % \newcommand{\ManagerName}{Madam or Sir to whom it may concern:}
@@ -29,7 +29,7 @@
 \newcommand{\MyFirstName}{Yu-Ting}
 \newcommand{\MyLastName}{Shen}
 \newcommand{\MyAddress}{Norman, OK 73019}
-\newcommand{\MyPhoneNumber}{(450)200.2633}
+\newcommand{\MyPhoneNumber}{+1~(450)~200~2633}
 \newcommand{\MyEmail}{YuTing.Shen-1@ou.edu}
 %\newcommand{\MyHomepage}{www.myhomepage.com}
 
