--- a/resume_2018/academic_CV_2018.tex
+++ b/resume_2018/academic_CV_2018.tex
@@ -165,81 +165,81 @@ The new framework processes datasets 10 times larger than the previous one, auto
 %     PUBLICATIONS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Publications}
-178 records on INSPIRE. Here lists the main contributions and links.
+% \section{Publications}
+% 178 records on INSPIRE. Here lists the main contributions and links.
 
-\runsubsection{Papers:}
-\location{}
-\begin{tightemize}
-\item Search for electroweak production of supersymmetric states in scenarios with compressed mass spectra at $\sqrt{s} = 13$ TeV $pp$ collision data with the ATLAS detector\\
-      link: \href{https://journals.aps.org/prd/abstract/10.1103/PhysRevD.97.052010}{PRD 97, 052010 (2018)}
-\item Search for supersymmetry in final states with two same-sign or three leptons and jets using 36 fb$^{-1}$ of $\sqrt{s} = 13$ TeV $pp$ collision data with the ATLAS detector\\
-      link: \href{https://link.springer.com/article/10.1007/JHEP09(2017)084}{JHEP09 (2017) 084}
-\item Search for supersymmetry at $\sqrt{s} = 13$ TeV in final states with jets and two same-sign leptons or three leptons with the ATLAS detector\\
-      link: \href{https://link.springer.com/article/10.1140%2Fepjc%2Fs10052-016-4095-8}{Eur. Phys. J. C 76 (2016) 259}
-\item Search for resonances in diphoton events at $\sqrt{s} = 13$ with the ATLAS detector\\
-      link: \href{https://link.springer.com/article/10.1007/JHEP09(2016)001}{JHEP09 (2016) 001}
-\end{tightemize}
-\sectionsep
+% \runsubsection{Papers:}
+% \location{}
+% \begin{tightemize}
+% \item Search for electroweak production of supersymmetric states in scenarios with compressed mass spectra at $\sqrt{s} = 13$ TeV $pp$ collision data with the ATLAS detector\\
+%       link: \href{https://journals.aps.org/prd/abstract/10.1103/PhysRevD.97.052010}{PRD 97, 052010 (2018)}
+% \item Search for supersymmetry in final states with two same-sign or three leptons and jets using 36 fb$^{-1}$ of $\sqrt{s} = 13$ TeV $pp$ collision data with the ATLAS detector\\
+%       link: \href{https://link.springer.com/article/10.1007/JHEP09(2017)084}{JHEP09 (2017) 084}
+% \item Search for supersymmetry at $\sqrt{s} = 13$ TeV in final states with jets and two same-sign leptons or three leptons with the ATLAS detector\\
+%       link: \href{https://link.springer.com/article/10.1140%2Fepjc%2Fs10052-016-4095-8}{Eur. Phys. J. C 76 (2016) 259}
+% \item Search for resonances in diphoton events at $\sqrt{s} = 13$ with the ATLAS detector\\
+%       link: \href{https://link.springer.com/article/10.1007/JHEP09(2016)001}{JHEP09 (2016) 001}
+% \end{tightemize}
+% \sectionsep
 
-\runsubsection{Conference notes:}
-\location{}
-\begin{tightemize}
-\item Search for supersymmetry in final states with two same-sign or three leptons and jets using 36 fb$^{-1}$ of $\sqrt{s} = 13$ TeV $pp$ collision data with the ATLAS detector\\
-      link: \href{https://cds.cern.ch/record/2261952}{ATLAS-COM-CONF-2017-041}
-\item Search for scalar diphoton resonances with 15.4 fb$^{-1}$ of data collected at $\sqrt{s} = 13$ TeV in 2015 and 2016 with the ATLAS detector\\
-      link: \href{https://cds.cern.ch/record/2199338}{ATLAS-COM-CONF-2016-056}
-\item Electron efficiency measurements with the ATLAS detector using the 2015 LHC proton-proton collision data\\
-      % link: \href{https://cds.cern.ch/record/2157687}{ATLAS-CONF-2016-024}
-      link: \href{https://cds.cern.ch/record/2142831}{ATLAS-COM-CONF-2016-028}
-\item Search for resonances in diphoton events with the ATLAS detector at $\sqrt{s} = 13$ TeV\\
-      link: \href{https://cds.cern.ch/record/2138074}{ATLAS-COM-CONF-2016-016}
-\item Search for supersymmetry at $\sqrt{s} = 13$ TeV in final states with jets and two same-sign leptons or three leptons with the ATLAS detector\\
-      link: \href{https://cds.cern.ch/record/2114088}{ATLAS-COM-CONF-2015-100}
-\end{tightemize}
-\sectionsep
+% \runsubsection{Conference notes:}
+% \location{}
+% \begin{tightemize}
+% \item Search for supersymmetry in final states with two same-sign or three leptons and jets using 36 fb$^{-1}$ of $\sqrt{s} = 13$ TeV $pp$ collision data with the ATLAS detector\\
+%       link: \href{https://cds.cern.ch/record/2261952}{ATLAS-COM-CONF-2017-041}
+% \item Search for scalar diphoton resonances with 15.4 fb$^{-1}$ of data collected at $\sqrt{s} = 13$ TeV in 2015 and 2016 with the ATLAS detector\\
+%       link: \href{https://cds.cern.ch/record/2199338}{ATLAS-COM-CONF-2016-056}
+% \item Electron efficiency measurements with the ATLAS detector using the 2015 LHC proton-proton collision data\\
+%       % link: \href{https://cds.cern.ch/record/2157687}{ATLAS-CONF-2016-024}
+%       link: \href{https://cds.cern.ch/record/2142831}{ATLAS-COM-CONF-2016-028}
+% \item Search for resonances in diphoton events with the ATLAS detector at $\sqrt{s} = 13$ TeV\\
+%       link: \href{https://cds.cern.ch/record/2138074}{ATLAS-COM-CONF-2016-016}
+% \item Search for supersymmetry at $\sqrt{s} = 13$ TeV in final states with jets and two same-sign leptons or three leptons with the ATLAS detector\\
+%       link: \href{https://cds.cern.ch/record/2114088}{ATLAS-COM-CONF-2015-100}
+% \end{tightemize}
+% \sectionsep
 
-\runsubsection{Internal notes:}
-\location{}
-\begin{tightemize}
-\item SUSY searches for electroweak production with compressed mass spectra at ATLAS\\
-      link: \href{https://cds.cern.ch/record/2631591}{ATL-COM-PHYS-2018-1073}
-\item Search for weak production of compressed supersymmetry with two soft leptons and missing transverse momentum in $pp$ collision at $\sqrt{s} = 13$ TeV with the ATLAS detector\\
-      link: \href{https://cds.cern.ch/record/2284973}{ATL-COM-PHYS-2017-1440}
-\item Support note for electron ID: electron isolation\\
-      link: \href{https://cds.cern.ch/record/2274466}{ATL-COM-PHYS-2017-1043}
-\item Overview of the methods used to estimate the fake lepton background in the SUSY group\\
-      link: \href{https://cds.cern.ch/record/2261709}{ATL-COM-PHYS-2017-469}
-\item ATLAS electron, photon and muon isolation in Run 2\\
-      link: \href{https://cds.cern.ch/record/2256658}{ATL-COM-PHYS-2017-290}
-\item Search for supersymmetry in final states with two same-sign or three leptons and jets using $\sqrt{s} = 13$ TeV $pp$ collision data collected with the ATLAS detector\\
-      link: \href{https://cds.cern.ch/record/2252643}{ATL-COM-PHYS-2017-149}
-\item Searches for weak production of compressed supersymmetry in $pp$ collision at $\sqrt{s} = 13$ TeV with the ATLAS detector\\
-      link: \href{https://cds.cern.ch/record/2235272}{ATL-COM-PHYS-2016-1708}
-\item Search for strongly-produced superpartners in final states with same-sign or three leptons and jets in 2015+2016 $pp$ collision data at $\sqrt{s} = 13$ TeV (Supporting note for Moriond 2017)\\
-      link: \href{https://cds.cern.ch/record/2231789}{ATL-COM-PHYS-2016-1616}
-\item Measurement of electron isolation efficiencies and scale factors with early Run-2 data\\
-      link: \href{https://cds.cern.ch/record/2209586}{ATL-COM-PHYS-2016-1181}
-\item Search for supersymmetry at $\sqrt{s} = 13$ TeV with two same-sign leptons or three leptons with the ATLAS detector\\
-      link: \href{https://cds.cern.ch/record/2196580}{ATL-COM-PHYS-2016-865}
-\item Search for new phenomena in diphoton events with the ATLAS detector at $\sqrt{s} = 13$ TeV: Isolation studies\\
-      link: \href{https://cds.cern.ch/record/2162758}{ATL-COM-PHYS-2016-760}
-\item Search for strongly-produced superpartners in final states with same-sign or three leptons and jets in 2015+2016 $pp$ collisions data at $\sqrt{s} = 13$ TeV (Supporting note)\\
-      link: \href{https://cds.cern.ch/record/2151944}{ATL-COM-PHYS-2016-495}
-\item Isolation studies : Search for new phenomena in diphoton events with the ATLAS detector at $\sqrt{s} = 13$ TeV\\
-      link: \href{https://cds.cern.ch/record/2136940}{ATL-COM-PHYS-2016-216}
-\item Supporting document on electron identification and efficiency measurements using the 2015 LHC proton-proton collision data\\
-      link: \href{https://cds.cern.ch/record/2125283}{ATL-COM-PHYS-2016-041}
-\item Electron isolation efficiencies with 2015 data\\
-      link: \href{https://cds.cern.ch/record/2112167}{ATL-COM-PHYS-2015-1486}
-\item Search for supersymmetry at $\sqrt{s} = 13$ TeV in final states with jets and two same-sign leptons or three leptons with the ATLAS detector\\
-      link: \href{https://cds.cern.ch/record/2102919}{ATL-COM-PHYS-2015-1382}
-\item Search for strongly produced superpartners in final states with same-sign leptons or three leptons and jets in $pp$ collisions at $\sqrt{s} = 13$ TeV (Supporting note)\\
-      link: \href{https://cds.cern.ch/record/2052581}{ATL-COM-PHYS-2015-1150}
-\item Search for strongly produced superpartners in final states with same-sign leptons or three leptons and jets: preparing for 2015 analyses\\
-      link: \href{https://cds.cern.ch/record/2012029}{ATL-COM-PHYS-2015-329}
-\end{tightemize}
-\sectionsep
+% \runsubsection{Internal notes:}
+% \location{}
+% \begin{tightemize}
+% \item SUSY searches for electroweak production with compressed mass spectra at ATLAS\\
+%       link: \href{https://cds.cern.ch/record/2631591}{ATL-COM-PHYS-2018-1073}
+% \item Search for weak production of compressed supersymmetry with two soft leptons and missing transverse momentum in $pp$ collision at $\sqrt{s} = 13$ TeV with the ATLAS detector\\
+%       link: \href{https://cds.cern.ch/record/2284973}{ATL-COM-PHYS-2017-1440}
+% \item Support note for electron ID: electron isolation\\
+%       link: \href{https://cds.cern.ch/record/2274466}{ATL-COM-PHYS-2017-1043}
+% \item Overview of the methods used to estimate the fake lepton background in the SUSY group\\
+%       link: \href{https://cds.cern.ch/record/2261709}{ATL-COM-PHYS-2017-469}
+% \item ATLAS electron, photon and muon isolation in Run 2\\
+%       link: \href{https://cds.cern.ch/record/2256658}{ATL-COM-PHYS-2017-290}
+% \item Search for supersymmetry in final states with two same-sign or three leptons and jets using $\sqrt{s} = 13$ TeV $pp$ collision data collected with the ATLAS detector\\
+%       link: \href{https://cds.cern.ch/record/2252643}{ATL-COM-PHYS-2017-149}
+% \item Searches for weak production of compressed supersymmetry in $pp$ collision at $\sqrt{s} = 13$ TeV with the ATLAS detector\\
+%       link: \href{https://cds.cern.ch/record/2235272}{ATL-COM-PHYS-2016-1708}
+% \item Search for strongly-produced superpartners in final states with same-sign or three leptons and jets in 2015+2016 $pp$ collision data at $\sqrt{s} = 13$ TeV (Supporting note for Moriond 2017)\\
+%       link: \href{https://cds.cern.ch/record/2231789}{ATL-COM-PHYS-2016-1616}
+% \item Measurement of electron isolation efficiencies and scale factors with early Run-2 data\\
+%       link: \href{https://cds.cern.ch/record/2209586}{ATL-COM-PHYS-2016-1181}
+% \item Search for supersymmetry at $\sqrt{s} = 13$ TeV with two same-sign leptons or three leptons with the ATLAS detector\\
+%       link: \href{https://cds.cern.ch/record/2196580}{ATL-COM-PHYS-2016-865}
+% \item Search for new phenomena in diphoton events with the ATLAS detector at $\sqrt{s} = 13$ TeV: Isolation studies\\
+%       link: \href{https://cds.cern.ch/record/2162758}{ATL-COM-PHYS-2016-760}
+% \item Search for strongly-produced superpartners in final states with same-sign or three leptons and jets in 2015+2016 $pp$ collisions data at $\sqrt{s} = 13$ TeV (Supporting note)\\
+%       link: \href{https://cds.cern.ch/record/2151944}{ATL-COM-PHYS-2016-495}
+% \item Isolation studies : Search for new phenomena in diphoton events with the ATLAS detector at $\sqrt{s} = 13$ TeV\\
+%       link: \href{https://cds.cern.ch/record/2136940}{ATL-COM-PHYS-2016-216}
+% \item Supporting document on electron identification and efficiency measurements using the 2015 LHC proton-proton collision data\\
+%       link: \href{https://cds.cern.ch/record/2125283}{ATL-COM-PHYS-2016-041}
+% \item Electron isolation efficiencies with 2015 data\\
+%       link: \href{https://cds.cern.ch/record/2112167}{ATL-COM-PHYS-2015-1486}
+% \item Search for supersymmetry at $\sqrt{s} = 13$ TeV in final states with jets and two same-sign leptons or three leptons with the ATLAS detector\\
+%       link: \href{https://cds.cern.ch/record/2102919}{ATL-COM-PHYS-2015-1382}
+% \item Search for strongly produced superpartners in final states with same-sign leptons or three leptons and jets in $pp$ collisions at $\sqrt{s} = 13$ TeV (Supporting note)\\
+%       link: \href{https://cds.cern.ch/record/2052581}{ATL-COM-PHYS-2015-1150}
+% \item Search for strongly produced superpartners in final states with same-sign leptons or three leptons and jets: preparing for 2015 analyses\\
+%       link: \href{https://cds.cern.ch/record/2012029}{ATL-COM-PHYS-2015-329}
+% \end{tightemize}
+% \sectionsep
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -247,19 +247,15 @@ The new framework processes datasets 10 times larger than the previous one, auto
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Skills}
-
-\location{Languages:}
-C/C++, Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn), BASH shell script, R, VBA\\
-\location{Framework:}
-ROOT, HistFitter\\
-\location{Database:}
-SQL\\
-\location{Tools:}
-Git, SVN, Vim, \LaTeX, HTML, Markdown, MicroSoft Office, Apple Pages/Numbers/Keynote\\
-\location{Machin Learning:}
-kNN, linear/logistic regression, decision tree, SVM, k-Means\\
-\location{OS:}
-Mac, Linux, Unix, Windows\\
+\location{}
+\begin{tightemize}
+\item Languages: C/C++, Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn), BASH shell script, R, VBA, \LaTeX, HTML, Markdown
+\item Framework: ROOT, HistFitter
+\item Database: SQL
+\item Tools: Git, SVN, Vim, MicroSoft Office, Apple Pages/Numbers/Keynote
+% \item Machin Learning: kNN, linear/logistic regression, decision tree, SVM, k-Means
+\item OS: Mac, Linux, Unix, Windows
+\end{tightemize}
 \sectionsep
 
 
